# utf8-string-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
source/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main_test.cpp  utf8_string_test.cpp
utf8-string-lib/: CMakeLists.txt  utf8_string.cpp  utf8_string.hpp
